--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                             <a class="scrollTo" data-scrollTo="popular" href="#">Ver nuestros modelos</a>
                         </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
@@ -79,11 +78,8 @@
                     <div class="thumb">
                         <img src="img/popular_item_1.jpg" alt="">
                         <div class="text-content">
-                            <h4>Mauris tempus</h4>
-                            <span>76 listings</span>
-                        </div>
-                        <div class="plus-button">
-                            <a href="#"><i class="fa fa-plus"></i></a>
+                            <h4>La Calera</h4>
+                            <span>26 Julio 2020</span>
                         </div>
                     </div>
                 </div>
