Edicion de imagenes 2

--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
                     <div class="thumb">
                         <img src="img/popular_item_2.jpg" alt="">
                         <div class="text-content">
-                            <h4>Aenean dolor</h4>
-                            <span>18 listings</span>
-                        </div>
-                        <div class="plus-button">
-                            <a href="#"><i class="fa fa-plus"></i></a>
+                            <h4>La Calera</h4>
+                            <span>13 Junio 2019</span>
                         </div>
                     </div>
                 </div>
