--- a/index.html
+++ b/index.html
@@ -556,8 +556,7 @@
                             3. Click "Share" and choose "Embed map" tab
                             4. Copy only URL and paste it within the src="" field below
                     -->
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.3396052189204!2d-73.92303917084858!3d4.529303536711176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3fbe118d8daa35%3A0x4d7c73f06be976fa!2sCl.%204%20%232-56%2C%20Choach%C3%AD%2C%20Cundinamarca!5e0!3m2!1ses!2sco!4v1615192491184!5m2!1ses!2sco" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
